# DragonBot

dragon_bot/: google_search.py  pyproject.toml
dragon_bot/data/: search_history.txt
