[project]
name = "dragon-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Didenko Victoria",email = "155799784+misfits3z@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "openai (>=1.66.5,<2.0.0)",
    "panda3d (>=1.10.15,<2.0.0)"
]

[tool.poetry]
packages = [{include = "dragon_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
